samples/_failures_safe/1761627724_784984_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d3f99e6.c: In function ‘main’:
./samples/SAFE/__tmp_0d3f99e6.c:172:12: error: missing terminating " character
  172 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_0d3f99e6.c:172:5: error: expected expression at end of input
  172 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_0d3f99e6.c:172:5: error: expected declaration or statement at end of input
